# sql-cohort-analysis

./: .gitignore  README.md  SQL-OnlineRetail-CohortAnalysis.sql  app.py  main.py  preprocess.py  pyproject.toml  render.yaml
.history/: app_20260412192745.py  app_20260412193036.py  requirements_20260412192812.txt
data/processed/: cohort_pivot.joblib  cohort_size.joblib  retention.joblib
