[project]
name = "sql-cohort-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "numpy>=1.26.0",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "plotly>=5.20.0",
    "streamlit>=1.35.0",
    "xlrd>=2.0.1",
]
